Huge work added.

--- a/notebooks/analyze_a_run/check_db_status_out.ipynb
+++ b/notebooks/analyze_a_run/check_db_status_out.ipynb
@@ -175,20 +175,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9 entries, 0 to 8\n",
+      "RangeIndex: 12 entries, 0 to 11\n",
       "Data columns (total 8 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
-      " 0   image            9 non-null      object\n",
-      " 1   date             9 non-null      object\n",
-      " 2   timestamp        9 non-null      object\n",
-      " 3   hidden_features  9 non-null      int64 \n",
-      " 4   image_size       9 non-null      object\n",
-      " 5   status           9 non-null      object\n",
-      " 6   data_downloaded  9 non-null      object\n",
-      " 7   full_path        9 non-null      object\n",
+      " 0   image            12 non-null     object\n",
+      " 1   date             12 non-null     object\n",
+      " 2   timestamp        12 non-null     object\n",
+      " 3   hidden_features  12 non-null     int64 \n",
+      " 4   image_size       12 non-null     object\n",
+      " 5   status           12 non-null     object\n",
+      " 6   data_downloaded  12 non-null     object\n",
+      " 7   full_path        12 non-null     object\n",
       "dtypes: int64(1), object(7)\n",
-      "memory usage: 704.0+ bytes\n"
+      "memory usage: 896.0+ bytes\n"
      ]
     }
    ],
@@ -328,6 +328,39 @@
        "      <td>1603816949-617728</td>\n",
        "      <td>64</td>\n",
        "      <td>[256,256]</td>\n",
+       "      <td>done</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>cameramen</td>\n",
+       "      <td>28/10/20</td>\n",
+       "      <td>1603843559-156915</td>\n",
+       "      <td>45</td>\n",
+       "      <td>[256,256]</td>\n",
+       "      <td>done</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>cameramen</td>\n",
+       "      <td>28/10/20</td>\n",
+       "      <td>1603867216-755376</td>\n",
+       "      <td>45</td>\n",
+       "      <td>[256,256]</td>\n",
+       "      <td>done</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>cameramen</td>\n",
+       "      <td>28/10/20</td>\n",
+       "      <td>1603905451-45262</td>\n",
+       "      <td>90</td>\n",
+       "      <td>[256,256]</td>\n",
        "      <td>running</td>\n",
        "      <td>FALSE</td>\n",
        "      <td>C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...</td>\n",
@@ -337,27 +370,33 @@
        "</div>"
       ],
       "text/plain": [
-       "       image      date          timestamp  hidden_features image_size  \\\n",
-       "0  cameramen  23/10/20  1603478755-305517               75  [256,256]   \n",
-       "1  cameramen  24/10/20  1603557121-338703               55  [256,256]   \n",
-       "2  cameramen  25/10/20  1603583765-067812               55  [256,256]   \n",
-       "3  cameramen  26/10/20  1603671438-603947               85  [256,256]   \n",
-       "4  cameramen  26/10/20  1603672968-148557               85  [256,256]   \n",
-       "5  cameramen  26/10/20  1603731888-012273               85  [256,256]   \n",
-       "6  cameramen  26/10/20  1603731938-952001               85  [256,256]   \n",
-       "7  cameramen  27/10/20  1603774067-025589               64  [256,256]   \n",
-       "8  cameramen  27/10/20  1603816949-617728               64  [256,256]   \n",
+       "        image      date          timestamp  hidden_features image_size  \\\n",
+       "0   cameramen  23/10/20  1603478755-305517               75  [256,256]   \n",
+       "1   cameramen  24/10/20  1603557121-338703               55  [256,256]   \n",
+       "2   cameramen  25/10/20  1603583765-067812               55  [256,256]   \n",
+       "3   cameramen  26/10/20  1603671438-603947               85  [256,256]   \n",
+       "4   cameramen  26/10/20  1603672968-148557               85  [256,256]   \n",
+       "5   cameramen  26/10/20  1603731888-012273               85  [256,256]   \n",
+       "6   cameramen  26/10/20  1603731938-952001               85  [256,256]   \n",
+       "7   cameramen  27/10/20  1603774067-025589               64  [256,256]   \n",
+       "8   cameramen  27/10/20  1603816949-617728               64  [256,256]   \n",
+       "9   cameramen  28/10/20  1603843559-156915               45  [256,256]   \n",
+       "10  cameramen  28/10/20  1603867216-755376               45  [256,256]   \n",
+       "11  cameramen  28/10/20   1603905451-45262               90  [256,256]   \n",
        "\n",
-       "    status data_downloaded                                          full_path  \n",
-       "0     done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "1     done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "2     done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "3   failed           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "4     done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "5    doubt           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "6     done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "7     done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
-       "8  running           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  "
+       "     status data_downloaded                                          full_path  \n",
+       "0      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "1      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "2      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "3    failed           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "4      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "5     doubt           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "6      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "7      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "8      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "9      done            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "10     done           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  \n",
+       "11  running           FALSE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  "
       ]
      },
      "execution_count": 6,
@@ -711,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +908,7 @@
        "4            TRUE  C:\\\\Users\\\\Francesco\\\\Documents\\\\tests\\\\siren-...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1032,7 @@
        "1603478755-305517  2906.302068  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
